--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>To do list</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    
+<main>
+    <section class="nil"></section>
+    <section class="mo"></section>
+    <section class="pau"></section>
+</main>
+    <script src="./index.js"></script>
 </body>
 </html>
