creating and styling landing page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>To do list</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
-<main>
-    <section class="nil"></section>
-    <section class="mo"></section>
-    <section class="pau"></section>
-</main>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Just+Me+Again+Down+Here&family=Kalam:wght@300;400;700&family=Koulen&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
+    <!--landing page html starts here-->
+    <header class="lp-container">
+      <h1 class="lp-h1">To Do-List</h1>
+    </header>
+    <main>
+      <div class="lp-btnContainer">
+        <button id="lpBtnP" class="lpBtn">Paul</button>
+        <button id="lpBtnM" class="lpBtn">Moritz</button>
+        <button id="lpBtnN" class="lpBtn">Niloufar</button>
+      </div>
+      <!--our Html codes are going to insert here-->
+      <div class="lp-containerDisplay">
+        <section class="nil"></section>
+        <section class="mo"></section>
+        <section class="pau"></section>
+      </div>
+      <!-- ends of our Html codes and the rest are landing page Html-->
+      <footer id="lp-footer">&copy;Proudly presented by</br>Niloufar, Paul ,Moritz</footer>
+
+ 
+    </main>
+    <!--landing page html ends here-->
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
