added LandingPage function

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </header>
     <main>
       <div class="lp-btnContainer">
-        <button id="lpBtnP" class="lpBtn">Paul</button>
-        <button id="lpBtnM" class="lpBtn">Moritz</button>
-        <button id="lpBtnN" class="lpBtn">Niloufar</button>
+        <button id="lpBtnP" class="lpBtn" onclick="focusPaul()" ondblclick="unfocusPaul()">Paul</button>
+        <button id="lpBtnM" class="lpBtn" onclick="focusMo()" ondblclick="unfocusMo()">Moritz</button>
+        <button id="lpBtnN" class="lpBtn" onclick="focusNilo()" ondblclick="unfocusNilo()">Niloufar</button>
       </div>
       <!--our Html codes are going to insert here-->
       <div class="lp-containerDisplay">
-        <section class="nil"></section>
+        <section class="pau"></section>
         <section class="mo">
 
           <div id="MoToDoContainer">
@@ -97,7 +97,7 @@
             </div>
 
         </section>
-        <section class="pau"></section>
+        <section class="nil"></section>
       </div>
       <!-- ends of our Html codes and the rest are landing page Html-->
       <footer id="lp-footer">&copy;Proudly presented by</br>Niloufar, Paul ,Moritz</footer>
