combining niloufar to dolist to landing page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,50 @@
             </div>
 
         </section>
-        <section class="nil"></section>
+
+
+
+        <section class="nil">
+          <div class="nilContainer">
+            <div class="nilTodoApp">
+              <div class="nilFormContainer">
+                <form action="" id="nilForm" class="nilRow">
+                  <input
+                    type="text"
+                    id="nilInputBox"
+                    placeholder="What do you want to do"
+                  />
+                  <div id="nilSelect" class="nilSelect">
+                    <select name="todos" class="nilPriority">
+                      <option value="nilNormal">Normal</option>
+                      <option value="nilImportant">Important</option>
+                      <option value="nilUrgent">Urgent</option>
+                    </select>
+                  </div>
+                </form>
+                <div class="nilBtnContainer">
+                  <button type="submit" id="nilAdd" class="nilAddBtn">+</button>
+                </div>
+              </div>
+      
+              <div class="nilListContainer">
+                <ul id="nilul">
+                  <!--
+                  <li class="nilChecked">task 1</li>
+                  <li class="nilImportant">task 1</li>
+                  <li class="nilErgent">task 1</li>
+                  <li class="nilNormal">task 1</li>-->
+                </ul>
+              </div>
+            </div>
+          </div>
+
+        </section>
+
+
+
+
+
       </div>
       <!-- ends of our Html codes and the rest are landing page Html-->
        
