second final changes

--- a/html/pau.html
+++ b/html/pau.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../css/pau.css" />
   </head>
   <body>
+    <section class="pau">
     <form class="pa_form">
       <input type="text" class="todo-input pa_input" />
       <button class="todo-button pa_button" type="submit">
@@ -26,7 +27,7 @@
     <div class="todo-container pa_container">
       <ul class="todo-list pa_list"></ul>
     </div>
-
+  </section>
     <script src="../js/pau.js"></script>
   </body>
 </html>
