mergin pauls code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./index.css" />
+    <link
+    href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+    crossorigin="anonymous"
+  />
   </head>
   <body>
     <!--landing page html starts here-->
@@ -24,7 +34,22 @@
       </div>
       <!--our Html codes are going to insert here-->
       <div class="lp-containerDisplay">
-        <section class="pau"></section>
+
+        <section class="pau"> <!-- Pauls Section-->
+
+          <form class="pa_form">
+            <input type="text" class="todo-input pa_input" />
+            <button class="todo-button pa_button" type="submit">
+              <i class="fas fa-plus-square pa_fas"></i>
+            </button>
+          </form>
+          <div class="todo-container pa_container">
+            <ul class="todo-list pa_list"></ul>
+          </div>
+
+        </section>
+
+
         <section class="mo">
 
           <div id="MoToDoContainer">
