final final changes

--- a/html/pau.html
+++ b/html/pau.html
@@ -22,8 +22,8 @@
     "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   </head>
   <body>
-    <!-- <section class="pau">
-    <form class="pa_form">
+    <section class="pau">
+    <!--<form class="pa_form">
       <input type="text" class="todo-input pa_input" />
       <button class="todo-button pa_button" type="submit">
         <i class="fas fa-plus-square pa_fas"></i>
