--- a/index.html
+++ b/index.html
@@ -35,19 +35,7 @@
       <!--our Html codes are going to insert here-->
       <div class="lp-containerDisplay">
 
-        <section class="pau"> <!-- Pauls Section-->
-
-          <form class="pa_form">
-            <input type="text" class="todo-input pa_input" />
-            <button class="todo-button pa_button" type="submit">
-              <i class="fas fa-plus-square pa_fas"></i>
-            </button>
-          </form>
-          <div class="todo-container pa_container">
-            <ul class="todo-list pa_list"></ul>
-          </div>
-
-        </section>
+        <section class="pau"></section>
 
 
         <section class="mo">
@@ -172,5 +160,6 @@
     <footer id="lp-footer">&copy;Proudly presented by</br>Niloufar, Paul ,Moritz</footer>
     <!--landing page html ends here-->
     <script src="./index.js"></script>
+    <script src="./js/pau.js"></script>
   </body>
 </html>
