--- a/html/pau.html
+++ b/html/pau.html
@@ -4,35 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TodoList</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/pau.css" />
-    <script src= 
-"https://cdn.jsdelivr.net/npm/sweetalert2@9"> 
-    </script> 
-    <link rel="stylesheet" href= 
-    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-  </head>
+    <link rel="icon" href="../img/favicon.ico" /> 
+    </head>
   <body>
-    <section class="pau">
-    <!--<form class="pa_form">
-      <input type="text" class="todo-input pa_input" />
-      <button class="todo-button pa_button" type="submit">
-        <i class="fas fa-plus-square pa_fas"></i>
-      </button>
-    </form>
-    <div class="todo-container pa_container">
-      <ul class="todo-list pa_list"></ul>
-    </div> -->
-  </section>
+    <section class="pau"></section>
     <script src="../js/pau.js"></script>
   </body>
 </html>
